manifest/objects/LVGO__Vendor_Program__c.object
<CustomObject>
    <fields>
        <fullName>LVGO__Campaign_Automation_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Automation Management</label>
        <referenceTo>LVGO__Campaign_Automation_Management__c</referenceTo>
        <relationshipLabel>Vendor Programs</relationshipLabel>
        <relationshipName>Vendor_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Legacy_Salesforce_Id__c</fullName>
        <description>Holds salesforce id&apos;s that can be referenced for existing data during migration</description>
        <externalId>true</externalId>
        <label>Legacy Salesforce Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__Program_Notes__c</fullName>
        <label>Program Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Program_Order_Type__c</fullName>
        <label>Program Order Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                    <default>true</default>
                    <label>Primary</label>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Program_State__c</fullName>
        <label>Program State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>Non-NY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Vendor_Program_Code__c</fullName>
        <label>Vendor Program Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>LV Vendor Program</label>
    <listViews>
        <fullName>LVGO__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VP-{0000}</displayFormat>
        <label>Vendor Program Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LV Vendor Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>